Added some links to alternate resources

--- a/doc/backpropagation.tex
+++ b/doc/backpropagation.tex
@@ -468,6 +468,16 @@ Summing up, we have
 \begin{appendices}
 \section{Notation} \label{app:notation}
 For notation, we will use bold italic as vectors, e.g. $\bm{x}$, $\bm{y}$, $\bm{z}$. For matrices, we will use capital letters, $W$, $B$, $X$.
+
+\section{Resources}
+\begin{itemize}
+    \item \href{https://eli.thegreenplace.net/2016/the-softmax-function-and-its-derivative/}{A derivation of Softmax for Cross Entropy.}
+    \item \href{https://math.stackexchange.com/questions/945871/derivative-of-softmax-loss-function}{Another short derivation of Softmax for Cross Entropy on math stackexchange.}
+    \item \href{https://deepnotes.io/softmax-crossentropy}{Yet another derivation of Cross Entropy with softmax output.}
+    \item \href{http://neuralnetworksanddeeplearning.com/chap2.html}{A good guide to neural networks.}
+    \item \href{https://en.wikipedia.org/wiki/Cross_entropy}{Wikipedia on Cross Entropy.}
+    \item \href{http://colah.github.io/posts/2014-07-Understanding-Convolutions/}{CNN introduction.}
+\end{itemize}
 \end{appendices}
 
 
